[gd_scene load_steps=13 format=2]

[ext_resource path="res://ui/theme/gdscript_app_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/components/BreadCrumbs.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/theme/panel_breadcrumbs.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/UINavigator.gd" type="Script" id=4]
[ext_resource path="res://ui/icons/icon_settings.png" type="Texture" id=5]
[ext_resource path="res://ui/icons/icon_report.png" type="Texture" id=6]
[ext_resource path="res://ui/screens/course_outliner/CourseOutliner.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/icons/navigation_back.png" type="Texture" id=8]
[ext_resource path="res://ui/icons/navigation_outliner.png" type="Texture" id=9]
[ext_resource path="res://ui/icons/icon_godot_head.svg" type="Texture" id=10]
[ext_resource path="res://ui/components/FullScreenButton.tscn" type="PackedScene" id=11]
[ext_resource path="res://ui/components/popups/LessonDonePopup.tscn" type="PackedScene" id=12]

[node name="UINavigator" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layout" type="VBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Header" type="PanelContainer" parent="Layout"]
margin_right = 1920.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="Layout/Header"]
margin_right = 1920.0
margin_bottom = 48.0
custom_constants/margin_right = 12
custom_constants/margin_top = 0
custom_constants/margin_left = 12
custom_constants/margin_bottom = 0

[node name="HeaderContent" type="HBoxContainer" parent="Layout/Header/MarginContainer"]
margin_left = 12.0
margin_right = 1908.0
margin_bottom = 48.0

[node name="HomeButton" type="Button" parent="Layout/Header/MarginContainer/HeaderContent"]
visible = false
margin_left = 48.0
margin_right = 92.0
margin_bottom = 48.0
hint_tooltip = "Go back to the main menu"
mouse_default_cursor_shape = 2
icon = ExtResource( 10 )
flat = true

[node name="OutlinerButton" type="Button" parent="Layout/Header/MarginContainer/HeaderContent"]
margin_right = 32.0
margin_bottom = 48.0
hint_tooltip = "Open the course index"
mouse_default_cursor_shape = 2
icon = ExtResource( 9 )
flat = true

[node name="BackButton" type="Button" parent="Layout/Header/MarginContainer/HeaderContent"]
margin_left = 48.0
margin_right = 80.0
margin_bottom = 48.0
hint_tooltip = "Go to the previous page"
mouse_default_cursor_shape = 2
icon = ExtResource( 8 )
flat = true

[node name="BreadCrumbs" parent="Layout/Header/MarginContainer/HeaderContent" instance=ExtResource( 2 )]
margin_left = 96.0
margin_right = 96.0

[node name="Spacer" type="Control" parent="Layout/Header/MarginContainer/HeaderContent"]
margin_left = 112.0
margin_right = 1712.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( -514, 99 )
size_flags_horizontal = 3

[node name="ReportButton" type="Button" parent="Layout/Header/MarginContainer/HeaderContent"]
margin_left = 1728.0
margin_right = 1776.0
margin_bottom = 48.0
hint_tooltip = "Report an issue"
mouse_default_cursor_shape = 2
icon = ExtResource( 6 )
flat = true

[node name="SettingsButton" type="Button" parent="Layout/Header/MarginContainer/HeaderContent"]
margin_left = 1792.0
margin_right = 1840.0
margin_bottom = 48.0
hint_tooltip = "Configure the app"
mouse_default_cursor_shape = 2
icon = ExtResource( 5 )
flat = true

[node name="FullScreenButton" parent="Layout/Header/MarginContainer/HeaderContent" instance=ExtResource( 11 )]
margin_left = 1856.0
margin_right = 1896.0
margin_bottom = 48.0
mouse_default_cursor_shape = 2
size_flags_vertical = 1

[node name="Content" type="Panel" parent="Layout"]
margin_top = 48.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_clip_content = true
size_flags_vertical = 3

[node name="ScreenContainer" type="PanelContainer" parent="Layout/Content"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CourseOutliner" parent="Layout/Content" instance=ExtResource( 7 )]
visible = false

[node name="LessonDonePopup" parent="." instance=ExtResource( 12 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Tween" type="Tween" parent="."]
